--- a/package.json
+++ b/package.json
@@ -17,13 +17,23 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "js-cookie": "^3.0.1",
+    "keen-slider": "^6.6.4",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.7.0",
+    "moment": "^2.29.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-controllables": "^0.6.0",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-map-gl": "^7.0.10",
+    "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
