--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.4.2",
     "@mui/styled-engine-sc": "^5.4.2",
     "@mui/styles": "^5.4.2",
+    "@react-google-maps/api": "^2.8.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
