--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
     "keen-slider": "^6.6.4",
     "lodash": "^4.17.21",
