--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-mapbox-gl": "^5.1.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
